fix footer overflow on smaller resolutions

--- a/themes/evictionlab/assets/sass/_footer.scss
+++ b/themes/evictionlab/assets/sass/_footer.scss
@@ -151,7 +151,7 @@ footer {
   .footer-content {
     @include fill-parent();
     margin:auto;
-    height: grid(40);
+    height: grid(42);
     width: grid(88);
     flex-direction: column;
     align-items: flex-start;
@@ -238,7 +238,7 @@ footer {
       display:flex;
       flex-direction: column;
       flex-wrap:wrap;
-      height: 212px;
+      height: 220px;
       text-align:left;
       li { 
         width: grid(20);
